; ModuleID = '/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_arb_program_shader.c_abs_modifier.c'
source_filename = "/home/carl/AnghaBench/reactos/dll/directx/wine/wined3d/extr_arb_program_shader.c_abs_modifier.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@FALSE = common dso_local global i32 0, align 4
@TRUE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [21 x i8] c"Unknown modifier %u\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32, i32*)* @abs_modifier to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @abs_modifier(i32 %0, i32* %1) #0 {
  %3 = alloca i32, align 4
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  store i32 %0, i32* %4, align 4
  store i32* %1, i32** %5, align 8
  %6 = load i32, i32* @FALSE, align 4
  %7 = load i32*, i32** %5, align 8
  store i32 %6, i32* %7, align 4
  %8 = load i32, i32* %4, align 4
  switch i32 %8, label %40 [
    i32 132, label %9
    i32 133, label %10
    i32 138, label %11
    i32 137, label %14
    i32 131, label %17
    i32 130, label %20
    i32 136, label %23
    i32 129, label %26
    i32 128, label %29
    i32 134, label %32
    i32 135, label %35
    i32 140, label %38
    i32 139, label %39
  ]

9:                                                ; preds = %2
  store i32 140, i32* %3, align 4
  br label %44

10:                                               ; preds = %2
  store i32 140, i32* %3, align 4
  br label %44

11:                                               ; preds = %2
  %12 = load i32, i32* @TRUE, align 4
  %13 = load i32*, i32** %5, align 8
  store i32 %12, i32* %13, align 4
  store i32 138, i32* %3, align 4
  br label %44

14:                                               ; preds = %2
  %15 = load i32, i32* @TRUE, align 4
  %16 = load i32*, i32** %5, align 8
  store i32 %15, i32* %16, align 4
  store i32 137, i32* %3, align 4
  br label %44

17:                                               ; preds = %2
  %18 = load i32, i32* @TRUE, align 4
  %19 = load i32*, i32** %5, align 8
  store i32 %18, i32* %19, align 4
  store i32 131, i32* %3, align 4
  br label %44

20:                                               ; preds = %2
  %21 = load i32, i32* @TRUE, align 4
  %22 = load i32*, i32** %5, align 8
  store i32 %21, i32* %22, align 4
  store i32 130, i32* %3, align 4
  br label %44

23:                                               ; preds = %2
  %24 = load i32, i32* @TRUE, align 4
  %25 = load i32*, i32** %5, align 8
  store i32 %24, i32* %25, align 4
  store i32 136, i32* %3, align 4
  br label %44

26:                                               ; preds = %2
  %27 = load i32, i32* @TRUE, align 4
  %28 = load i32*, i32** %5, align 8
  store i32 %27, i32* %28, align 4
  store i32 129, i32* %3, align 4
  br label %44

29:                                               ; preds = %2
  %30 = load i32, i32* @TRUE, align 4
  %31 = load i32*, i32** %5, align 8
  store i32 %30, i32* %31, align 4
  store i32 128, i32* %3, align 4
  br label %44

32:                                               ; preds = %2
  %33 = load i32, i32* @TRUE, align 4
  %34 = load i32*, i32** %5, align 8
  store i32 %33, i32* %34, align 4
  store i32 134, i32* %3, align 4
  br label %44

35:                                               ; preds = %2
  %36 = load i32, i32* @TRUE, align 4
  %37 = load i32*, i32** %5, align 8
  store i32 %36, i32* %37, align 4
  store i32 135, i32* %3, align 4
  br label %44

38:                                               ; preds = %2
  store i32 140, i32* %3, align 4
  br label %44

39:                                               ; preds = %2
  store i32 140, i32* %3, align 4
  br label %44

40:                                               ; preds = %2
  %41 = load i32, i32* %4, align 4
  %42 = call i32 @FIXME(i8* getelementptr inbounds ([21 x i8], [21 x i8]* @.str, i64 0, i64 0), i32 %41)
  %43 = load i32, i32* %4, align 4
  store i32 %43, i32* %3, align 4
  br label %44

44:                                               ; preds = %40, %39, %38, %35, %32, %29, %26, %23, %20, %17, %14, %11, %10, %9
  %45 = load i32, i32* %3, align 4
  ret i32 %45
}

declare dso_local i32 @FIXME(i8*, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
